# Blur-AutoClickerCopy

./: CHANGELOG.md  README.md  overlay.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: App.tsx  hotkeys.ts  index.css  settingsSchema.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  hotkeys.rs  lib.rs  overlay.rs  ui_commands.rs  window_lifecycle.rs
src-tauri/src/engine/: process.rs  worker.rs
src-tauri/src/settings/: mod.rs
src/components/: CadenceInput.tsx  HotkeyCaptureInput.tsx  KeyCaptureInput.tsx  TitleBar.css  TitleBar.tsx
src/components/panels/: SimplePanel.tsx
src/components/panels/advanced/: CadenceSection.tsx
src/components/panels/zones/: CustomStopZoneSection.tsx  FailsafeSection.tsx
