[package]
name = "BlurAutoClicker"
version = "3.8.3"
description = "BlurAutoClicker - accuracy and performance focused auto clicker for Windows."
authors = ["Blur009"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "tray-icon", "image-ico"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading", "Win32_Security", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_UI_Shell"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
reqwest = { version = "0.13.4", features = ["json"] }
tauri-plugin-opener = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-fs = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = { version = "2", features = ["protocol-asset"] }
log = "0.4"
serde_json = "1.0"
raw-window-handle = "0.6.2"
tauri-plugin-updater = "2.10.0"
hmac = "0.13.0"
sha2 = "0.11"
hex = "0.4"
dirs = "6.0.0"
windows-targets = "0.53.5"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
chrono = "0.4"
crashpad-rs = { version = "0.2", features = ["prebuilt"], optional = true }
walkdir = "2"
zip = "2.2.0"
open = "5"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[features]
default = ["crashpad"]
crashpad = ["crashpad-rs"]

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
debug = true
split-debuginfo = "packed"
